--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,30 @@
 # Dependencies
 node_modules/
-.pnp
-.pnp.js
+backend/node_modules/
+frontend/node_modules/
 
-# Testing
-coverage/
-
-# Production
+# Build outputs
 dist/
-build/
 backend/dist/
 frontend/dist/
 frontend/.next/
-frontend/build/
+frontend/out/
 
-# Environment variables
+# Environment variables and secrets
 .env
-.env.local
-.env.*.local
+backend/.env
+frontend/.env.local
+gcp-key.json
+*.pem
 
-# Logs
-logs
+# IDEs and OS
+.vscode/
+.idea/
+.DS_Store
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-
+# Supabase
+supabase/.temp/
