--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,20 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start -p 3002",
+    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@metamask/sdk": "^0.34.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@tanstack/react-query": "^5.90.14",
+    "@wagmi/connectors": "^7.0.5",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "viem": "^2.43.3",
+    "wagmi": "^3.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
