--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "populate-summaries": "tsx src/scripts/populate-market-summaries.ts",
     "update-categories": "tsx src/scripts/update-market-categories.ts"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@dome-api/sdk": "^0.16.0",
     "@google-cloud/aiplatform": "^6.0.0",
